--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 body {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   background-color: #2d2e36;
   font-family: "Poppins", sans-serif;
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   min-height: 100vh;
 }
 
 #card {
-  /* display: block; */
-  /* align-self: center; */
+  max-width: 300px;
   background-color: #383a45;
   border-radius: 0.5em;
   margin-right: 1.75em;
   margin-left: 1.875em;
-  /* padding-left: 1.5625em;  25px */
-  /* padding-right: 1.6875em;
-    padding-top: 1.5625em;
-    padding-bottom: 1.875em; */
   padding: 1.5625em 1.6875em 1.875em 1.5625em;
+}
+
+a {
+  text-decoration: none;
 }
 
 img#mountain {
@@ -36,7 +36,8 @@ img#mountain {
   color: #fff;
   line-height: 119.7%;
   font-weight: normal;
-  margin-bottom: 1, 75em;
+  /* font-size: 1.875rem; */
+  margin-bottom: 1.75em;
 }
 
 #card p {
@@ -46,25 +47,25 @@ img#mountain {
 }
 
 @media only screen and (min-width: 660px) {
+  a {
+    display: flex;
+    align-items: center;
+  }
+
   #card {
     padding-block: 1.875em;
     padding-inline: 1.6875em;
-    display: flex;
-    align-items: center;
-    max-width: 729px;
-    /* max-height: 310px; */
+    /* display: flex;
+    align-items: center; */
+    max-width: 700px;
   }
 
   #card h1 {
-    margin-bottom: 1.75em;
+    margin-bottom: 0.9em;
   }
   #card p {
     margin-bottom: 1.875em;
   }
-
-  /* #card #main-content {
-    border: 1px solid red;
-  } */
 
   img#mountain {
     width: 262px;
